--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ span {
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: bold;
 }
 
@@ -17,7 +17,7 @@ span {
 }
 
 .magazine2 {
-  background-image: url("images/pink-pattern.png");
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
