--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ span {
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: "Times New Roman", 'Times', serif;
-  font-weight: bolder;
+  font-family: Times New Roman, Times, serif;
+  font-weight: 700;
 }
 
 .magazine1 {
