--- a/style.css
+++ b/style.css
@@ -16,6 +16,27 @@ html , body {
   height: 100%;
 }
 
+.newspaper {
+  background-color: antiquewhite;
+  font-family: 'Times New Roman';
+  font-weight: bold;
+}
+
+.magazine1 {
+  background-color: teal;
+  color: white;
+  font-family: Verdana;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.magazine2 {
+  background-image: './images/pink-pattern.png';
+  color: fuchsia;
+  font-family: Verdana;
+  font-weight: 900;
+}
+
 .main {
   overflow: auto;
   padding-bottom: 100px;
