--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 .magazine2 {
-  background-image: url(images/pink-pattern.png);
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana;
   font-weight: 900;
@@ -48,4 +48,8 @@
 
 .skewright {
   transform: skewX(-10deg);
+}
+
+span {
+  cursor: pointer;
 }
