--- a/style.css
+++ b/style.css
@@ -1,6 +1,45 @@
+body {
+  background: rgba(49, 54, 56, 1);
+  display: flex;
+  font-family: Montserrat, Roboto, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  width: 70%;
+}
+
+button {
+  background-color: rgba(218, 91, 89, 0);
+  border-radius: 10px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  flex-grow: 1;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  margin: 0.4em;
+  padding: 13px;
+  text-align: center;
+  text-decoration: none;
+}
+
+button:hover {
+  background-color: rgba(218, 91, 89, 1);
+}
+
+h2 {
+  color: white;
+  margin-left: 1.2em;
+}
+
+.content {
+  background-color: rgba(224, 223, 213, 1);
+  border-radius: 15px;
+  margin-top: 5%;
+  padding: 2em;
+}
+
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman';
+  font-family: "Times New Roman";
   font-weight: bold;
 }
 
@@ -13,7 +52,7 @@
 }
 
 .magazine2 {
-  background-image: url('images/pink-pattern.png');
+  background-image: url("images/pink-pattern.png");
   color: fuchsia;
   font-family: Verdana;
   font-weight: 900;
@@ -49,4 +88,3 @@
 .skewright {
   transform: skewX(-10deg);
 }
-
