--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: Times New Roman;
+  font-family: Times New Roman, serif;
   font-weight: bold;
 }
 
 .magazine1 {
   background-color: teal;
   color: white;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -20,7 +20,7 @@ body {
 .magazine2 {
   background-image: url('images/pink-pattern.png');
   color: fuchsia;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   font-weight: 900;
 }
 
