--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 body {
-    display: block;
+  display: block;
 }
 
 input {
-    width: 300px;
+  width: 500px;
 }
 
 header {
-    border: 1px solid blue;
-    text-align: center;
+  border: 1px solid blue;
+  text-align: center;
 }
 
 .carta {
-    border: 1px dotted violet;
-    text-align: center;
+  border: 1px dotted violet;
+  text-align: center;
 }
 
-/*<--------------Grupo estilo-------------->*/
-
+/*  <--------------Grupo estilo-------------->  */
 .newspaper {
     background-color: antiquewhite;
     font-family: 'Times New Roman', Times, serif;
@@ -25,53 +24,50 @@ header {
 }
 
 .magazine1 {
-    background-color: teal;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 900;
-    text-transform: uppercase;
+  background-color: teal;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
 }
 
 .magazine2 {
-    background-image: 'imagens/pink-pattern.jpg';
-    color: fuchsia;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 900;
+  background-image: 'images/pink-pattern.png';
+  color: fuchsia;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
 }
 
-/*<--------------Grupo tamanho-------------->*/
-
+/*  <--------------Grupo tamanho--------------> */
 .medium {
-    font-size: 20px;
-    padding: 8px;
+  font-size: 20px;
+  padding: 8px;
 }
 
 .big {
-    font-size: 30px;
-    padding: 10px;
+  font-size: 30px;
+  padding: 10px;
 }
 
 .reallybig {
-    font-size: 40px;
-    padding: 15px;
+  font-size: 40px;
+  padding: 15px;
 }
 
-/*<--------------Grupo rotação-------------->*/
-
+/*  <--------------Grupo rotação--------------> */
 .rotateleft {
-    transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
 
 .rotateright {
-    transform: rotate(5deg);
+  transform: rotate(5deg);
 }
 
-/*<--------------Grupo rotação-------------->*/
-
+/*  <--------------Grupo rotação--------------> */
 .skewleft {
-    transform: skewX(10deg);
+  transform: skewX(10deg);
 }
 
 .skewright {
-    transform: skewX(-10deg);
+  transform: skewX(-10deg);
 }
