Adequando aos requisitos

--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ header {
 
 /*  <--------------Grupo estilo-------------->  */
 .newspaper {
-    background-color: antiquewhite;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
+  background-color: antiquewhite;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
 }
 
 .magazine1 {
@@ -32,7 +32,7 @@ header {
 }
 
 .magazine2 {
-  background-image: 'images/pink-pattern.png';
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
