--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ html , body {
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
+  font-family: Times, Times, serif;
+  font-weight: 900;
 }
 
 .magazine1 {
