--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html , body {
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: Times, Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 700;
 }
 
