--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: auto;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 span {
@@ -31,7 +32,10 @@ span {
 }
 
 .paragrafo {
-    width: 100%;
+    flex-basis: 100%;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2em;
 }
 
 .newspaper {
