--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .content {
-  width: 90%;
-  margin: auto;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  width: 90%;
 }
 
 span {
@@ -12,19 +12,19 @@ span {
 
 .digitaTexto {
   border: 1px solid grey;
-  width: 80%;
-  padding: 12px 20px;
   border-radius: 4px;
+  padding: 12px 20px;
+  width: 80%;
 }
 
 .botao {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
+  background-color: #4caf50;
   border: none;
   border-radius: 4px;
+  color: white;
   cursor: pointer;
   margin: 0 8px;
+  padding: 14px 20px;
 }
 
 .botao:hover {
@@ -33,15 +33,16 @@ span {
 
 .paragrafo {
   flex-basis: 100%;
-  text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2em;
+  text-align: center;
 }
+  
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
+  font-family: Times New Roman, Times, serif;
+  font-weight: 600;
 }
 
 .magazine1 {
@@ -53,7 +54,7 @@ span {
 }
 
 .magazine2 {
-  background-image: url(images/pink-pattern.png);
+  background-image: url('images/pink-pattern.png)');
   color: fuchsia;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
