--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ span {
 }
 
 .botao {
-  background-color: #4caf50;
+  background-color: rgb(76, 175, 80);
   border: none;
   border-radius: 4px;
   color: white;
@@ -28,7 +28,7 @@ span {
 }
 
 .botao:hover {
-  background-color: #45a049;
+  background-color: rgb(69, 160, 73);
 }
 
 .paragrafo {
@@ -37,11 +37,10 @@ span {
   font-size: 2em;
   text-align: center;
 }
-  
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: Times New Roman, Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 600;
 }
 
