--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ text-transform: uppercase;
 
 .magazine2{
 background-image: url('images/pink-pattern.png');
-color: 'fuchsia';
-font-family: 'Verdana';
+color:fuchsia;
+font-family: Verdana;
 font-weight: 900;
 }
 
