--- a/style.css
+++ b/style.css
@@ -5,41 +5,41 @@
 }
 
 .magazine1 {
-  background-color com o valor teal
-  - color com o valor white
-  - font-family com o valor Verdana
-  - font-weight com o valor 900
-  - text-transform com o valor uppercase
+  background-color: teal;
+  color: white;
+  font-family: Verdana;
+  font-weight: 900;
+  text-transform: uppercase;
 }
 
 .magazine2 {
-  - background-image com a imagem images/pink-pattern.png
-  - color com o valor fuchsia
-  - font-family com o valor Verdana
-  - font-weight com o valor 900
+  background-image: url(images/pink-pattern.png);
+  color: fuchsia;
+  font-family: Verdana;
+  font-weight: 900;
 }
 
 .medium {
-  font-size com o valor 20px
-  - padding com o valor 8px
+  font-size: 20px;
+  padding: 8px;
 }
 
 .big {
-  font-size com o valor 30px
-  - padding com o valor 10px
+  font-size: 30px;
+  padding: 10px;
 }
 
 .reallybig {
-  font-size com o valor 40px
-  - padding com o valor 15px
+  font-size: 40px;
+  padding: 15px;
 }
 
 .rotateleft {
-  transform: rotate(-5deg)
+  transform: rotate(-5deg);
 }
 
 .rotateright {
-  transform: rotate(5deg)
+  transform: rotate(5deg);
 }
 
 .skewleft {
