--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .newspaper {
   background-color: antiquewhite;
-  font-family: Times New Roman;
-  font-weight: bold;
+  font-family: Times-New-Roman;
+  font-weight: bold 600;
 }
 
 .magazine1 {
@@ -13,7 +13,7 @@
 }
 
 .magazine2 {
-  background-image: url(images/pink-pattern.png);
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana;
   font-weight: 900;
