--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .magazine1 {
   background-color: teal;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana;
   font-weight: 900;
   text-transform: uppercase;
 }
