--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 .magazine1 {
   background-color: teal;
-  font-family: Verdana;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
   text-transform: uppercase;
 }
