--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-  display: block;
-}
-
 input {
   width: 500px;
 }
@@ -12,8 +8,11 @@ header {
 }
 
 .carta {
+  align-content: flex-start;
   border: 1px dotted violet;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 /*  <--------------Grupo estilo-------------->  */
