--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
 }
 
 .magazine2 {
-  background-image: 'images/pink-pattern.png';
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana;
-  text-transform: uppercase;
+  font-weight: 900;
 }
 
 .medium {
