--- a/style.css
+++ b/style.css
@@ -53,3 +53,70 @@ span {
 .skewright {
   transform: skewX(-10deg);
 }
+
+body {
+  background-color: mintcream;
+  font-family: 'Courier New', Courier, monospace ;
+}
+
+.main {
+  background-color: rgb(190, 211, 199);
+  border: 2px solid oldlace;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.form input {
+  background-color: mintcream;
+  border: 1px solid oldlace;
+  border-radius: 4px;
+}
+
+.button {
+  margin: 20px 0 25px;
+  text-align: center;
+}
+
+.button #criar-carta, .button #limpa-carta {
+  background-color: mintcream;
+  border: 1px solid oldlace;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+
+.button #criar-carta:hover, .button #limpa-carta:hover {
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+.paragraph {
+  text-align: center;
+  word-break: break-all;
+}
+
+.paragraph #carta-gerada {
+  line-height: 80px;
+}
+
+.footer {
+  background-color: oldlace;
+  padding: 2px;
+  text-align: center;
+}
+
+a {
+  color: rgb(190, 211, 199);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(190, 211, 199, 0.5);
+}
